gitops/apps/nudger-xwiki/overlays/prod/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nudger-xwiki
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "nudger-xwiki.prod.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nudger-xwiki
                port:
                  number: 80
